--- a/src/app/pages/establishment/establishment-overview/establishment-overview.component.html
+++ b/src/app/pages/establishment/establishment-overview/establishment-overview.component.html
@@ -7,6 +7,15 @@
              lastModifiedDate: lastModifiedDate,
              address: address
            }">
+
+  <ng-template #headerActions>
+    <button mat-raised-button
+            color="primary"
+            (click)="openCreateDish()">
+      Create new
+    </button>
+  </ng-template>
+
   <ng-template #address let-data="data">
     {{data.street + ' ' + data.houseNumber + ', (' + data.city + ', ' + data.country + ')'}}
   </ng-template>
