- added validation for establishment field

--- a/src/app/pages/establishment/creating-editing-establishment/creating-editing-establishment.component.html
+++ b/src/app/pages/establishment/creating-editing-establishment/creating-editing-establishment.component.html
@@ -21,5 +21,9 @@
 </div>
 <div mat-dialog-actions class="mat-dialog-actions">
   <button mat-raised-button color="accent" (click)="close()">Cancel</button>
-  <button mat-raised-button color="primary" (click)="create()">Save</button>
+  <button mat-raised-button
+          color="primary"
+          (click)="create()"
+          [disabled]="form.invalid"
+          >Save</button>
 </div>
