--- a/src/app/pages/dishes/creating-editing-dish/creating-editing-dish.component.html
+++ b/src/app/pages/dishes/creating-editing-dish/creating-editing-dish.component.html
@@ -1,26 +1,34 @@
 <h1 mat-dialog-title>Create new dish</h1>
 <div mat-dialog-content class="mat-dialog-content">
-  <div class="form" [formGroup]="form">
-    <mat-form-field appearance="outline">
-      <mat-label>Name</mat-label>
-      <input formControlName="name" matInput>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <input matInput formControlName="description"/>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Price</mat-label>
-      <input matInput formControlName="price"/>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>CategoryId</mat-label>
-      <input matInput formControlName="categoryId"/>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>ImageUrl</mat-label>
-      <input matInput formControlName="imageUrl"/>
-    </mat-form-field>
+  <div class="dialog-content-wrapper">
+    <div class="image-uploading-form">
+      <app-image-upload
+        (imageEmitter)="catchMainImage($event)"
+      >
+      </app-image-upload>
+    </div>
+    <div class="form-fields" [formGroup]="form">
+      <mat-form-field appearance="outline">
+        <mat-label>Name</mat-label>
+        <input formControlName="name" matInput>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <input matInput formControlName="description"/>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Price</mat-label>
+        <input matInput formControlName="price"/>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>CategoryId</mat-label>
+        <input matInput formControlName="categoryId"/>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>ImageUrl</mat-label>
+        <input matInput formControlName="imageUrl"/>
+      </mat-form-field>
+    </div>
   </div>
 </div>
 <div mat-dialog-actions class="mat-dialog-actions">
