--- a/src/app/pages/establishment/establishments-map/establishments-map.component.scss
+++ b/src/app/pages/establishment/establishments-map/establishments-map.component.scss
@@ -1,8 +1,16 @@
+@import 'styles/mixins';
+
 section {
+  max-width: 98vw;
+  height: 92vh;
+  border-radius: 10px;
+  @include shadow;
+  position: relative;
+  overflow: auto;
 
   .map {
     width: 100%;
-    height: 815px;
+    height: 92vh;
     cursor: pointer;
   }
 
