- made paging for leaflet map

--- a/src/app/pages/establishment/establishments-map/establishments-map.component.html
+++ b/src/app/pages/establishment/establishments-map/establishments-map.component.html
@@ -3,6 +3,8 @@
        leaflet
        [leafletOptions]="options"
        [leafletLayers]="markers"
+       (leafletMapZoomEnd)="onMapZoomEnd()"
+       (leafletMapReady)="onMapReady($event)"
   >
   </div>
 </section>
