--- a/src/app/pages/establishment/creating-editing-establishment/creating-editing-establishment.component.scss
+++ b/src/app/pages/establishment/creating-editing-establishment/creating-editing-establishment.component.scss
@@ -1,6 +1,45 @@
 .mat-dialog-content {
-  .form {
+
+  .dialog-content-wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .map-form {
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-bottom: 20px;
+
+      .map {
+        border-radius: 10px;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+      }
+    }
+
+    .form-fields {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      padding-left: 15px;
+      justify-content: space-between;
+
+      .coordinates {
+        display: flex;
+
+        mat-form-field:first-child {
+          padding-right: 7px;
+        }
+        mat-form-field:last-child {
+          padding-left: 7px;
+        }
+      }
+    }
+
   }
+
 }
+
