--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -19,7 +19,7 @@
   </ng-template>
   <ng-template #imageUrl let-data="data">
     <div class="dish__image-cell">
-      <img class="dish__image-img" src="{{data.imageUrl}}" alt="">
+      <img class="dish__image-img" [src]="data.imageUrl" alt="">
     </div>
   </ng-template>
   <ng-template #description let-data="data"
