- using just service instead of redux for GetAll method

--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -1,7 +1,6 @@
 <ffp-table [tableName]="'DishesOverview'"
-           [actionName]="'DishLoadAction'"
            [displayedColumns]="displayedColumns"
-           [selectors]="selectors"
+           [service]="service"
            [columnTemplateRefs]="{
              category: category, imageUrl: imageUrl, description: description,
              createdDate: createdDate, lastModifiedDate: lastModifiedDate}">
