--- a/src/app/pages/establishment/establishment-overview/establishment-overview.component.html
+++ b/src/app/pages/establishment/establishment-overview/establishment-overview.component.html
@@ -1,7 +1,6 @@
 <ffp-table [tableName]="'EstablishmentsOverview'"
            [displayedColumns]="displayedColumns"
-           [selectors]="selectors"
-           [actionName]="'EstablishmentLoadAction'"
+           [service]="service"
            [columnTemplateRefs]="{
              createdDate: createdDate,
              lastModifiedDate: lastModifiedDate,
