--- a/src/app/pages/orderings/ordering-overview/ordering-overview.component.html
+++ b/src/app/pages/orderings/ordering-overview/ordering-overview.component.html
@@ -1,7 +1,6 @@
 <ffp-table [tableName]="'OrderingOverview'"
            [displayedColumns]="displayedColumns"
-           [selectors]="selectors"
-           [actionName]="'OrderingLoadAction'"
+           [service]="service"
            [columnTemplateRefs]="{
              createdDate: createdDate,
              lastModifiedDate: lastModifiedDate
