- updated Ordering response due to last updates - fixed formatDate pipe

--- a/src/app/pages/orderings/ordering-overview/ordering-overview.component.html
+++ b/src/app/pages/orderings/ordering-overview/ordering-overview.component.html
@@ -3,7 +3,7 @@
            [service]="service"
            [columnTemplateRefs]="{
              createdDate: createdDate,
-             lastModifiedDate: lastModifiedDate
+             lastModifiedDate: lastModifiedDate,
            }">
   <ng-template #createdDate let-data="data">
     {{data.createdDate | formatDate}}
