- redesign the main design - added dishes cards page

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -6,7 +6,7 @@
 }
 
 .card {
-  padding: 20px;
+  width: 100%;
   background: $base-light;
   flex: 0 0 calc(33.33% - 20px);
   box-sizing: border-box;
