--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <div class="dashboard-container">
-  <div class="top-container">
+  <div class="top-container"
+  >
     <div class="totals-row">
-      <div class="card total-item"></div>
-      <div class="card total-item"></div>
-      <div class="card total-item"></div>
-      <div class="card total-item"></div>
-      <div class="card total-item"></div>
+<!--      <ffd-card [width]="'400px'" [height]="'300px'"></ffd-card>-->
+<!--      <ffd-card [width]="'400px'" [height]="'300px'"></ffd-card>-->
+<!--      <ffd-card [width]="'400px'" [height]="'300px'"></ffd-card>-->
+<!--      <ffd-card [width]="'400px'" [height]="'300px'"></ffd-card>-->
+<!--      <ffd-card [width]="'400px'" [height]="'300px'"></ffd-card>-->
     </div>
   </div>
   <div class="center-container">
