--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -8,7 +8,7 @@
   width: 5rem;
   height: 100vh;
   @include shadow;
-  background: #9cae72;
+  background: #FDFAF0;
 
   .logo-container {
     display: flex;
