--- a/src/app/pages/dashboard/components/sales-statistic/sales-statistic.component.scss
+++ b/src/app/pages/dashboard/components/sales-statistic/sales-statistic.component.scss
@@ -13,7 +13,14 @@
   }
 
   .card {
-    @include card;
+    padding: 20px;
+    background: $base-light;
+    flex: 0 0 calc(33.33% - 20px);
+    box-sizing: border-box;
+
+    .card-content {
+      width: 100%;
+    }
 
     &:hover {
       @include shadow-hower;
