--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -11,12 +11,12 @@ $light-focused: rgba(white, 0.12);
 
 $base: rgb(156, 174, 114, 0.1);
 $base-dark: #040800;
-$base-light: #b3b18d;
+$base-light: #E8DCC6;
 $on-base: #000000;
 
 $primary: rgba(21, 41, 0, 0.77);
 $primary-dark: #040800;
-$primary-light: #b9b39d;
+$primary-light: #E8DCC6;
 $on-primary: #BAB6AD;
 
 $secondary: #ffd54f;
