- used currency type - changed a sizes a bit

--- a/src/app/pages/dishes/dishes-cards/dish-card-content/dish-card-content.component.html
+++ b/src/app/pages/dishes/dishes-cards/dish-card-content/dish-card-content.component.html
@@ -7,7 +7,7 @@
       {{dish.name}}
     </div>
     <div class="price">
-      {{dish.price}}
+      {{dish.price | currency:'USD'}}
     </div>
   </div>
 </div>
