--- a/src/app/admin-panel/components/sidenav/sidenav.component.scss
+++ b/src/app/admin-panel/components/sidenav/sidenav.component.scss
@@ -68,45 +68,56 @@
     .sidenav-nav-item {
       width: 100%;
       margin-bottom: 0.625rem;
-
-      .sidenav-nav-link {
-        display: flex;
-        align-items: center;
-        height: 3rem;
-        padding: 0 0 0 1rem;
-        text-decoration: none;
-        border-radius: 0.625rem;
-        transition: all .3s ease;
-
-        .sidenav-link-icon {
-          font-size: 19px;
-          text-align: center;
-        }
-
-        i {
-          font-weight: 600;
-          color: $primary !important;
-        }
-
-        .sidenav-link-text {
-          color: $primary;
-          margin-left: 1.5rem;
-        }
-      }
-
-      .sidenav-nav-link:hover {
-        background-color: #fff;
-        color: $primary;
-
-        .menu-collapse-icon {
-          color: #fff;
-        }
-      }
     }
   }
 
   &.sidenav-collapsed {
     width: 17.5rem;
+  }
+
+  .sidenav-nav-link {
+    display: flex;
+    align-items: center;
+    height: 3rem;
+    padding: 0 0 0 1rem;
+    text-decoration: none;
+    border-radius: 0.625rem;
+    transition: all .3s ease;
+
+    .sidenav-link-icon {
+      font-size: 19px;
+      text-align: center;
+    }
+
+    i {
+      font-weight: 600;
+      color: $primary !important;
+    }
+
+    .sidenav-link-text {
+      color: $primary;
+      margin-left: 1.5rem;
+    }
+  }
+
+  .sidenav-nav-link:hover {
+    background-color: #fff;
+    color: $primary;
+
+    .menu-collapse-icon {
+      color: #fff;
+    }
+  }
+
+  .actions-block {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+
+    .sidenav-nav-link {
+      margin: 0 15px;
+      background-color: $primary-light;
+    }
   }
 
 }
