- made first example of carousel

--- a/src/app/client/pages/home-page/home-page.component.html
+++ b/src/app/client/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<p>home-page works!</p>
+<app-carousel [height]="'400px'"
+              [maxWidth]="'75%'"
+              [slides]="slides">
+</app-carousel>
