- attempt to use dishes list on home page

--- a/src/app/client/pages/home-page/home-page.component.html
+++ b/src/app/client/pages/home-page/home-page.component.html
@@ -2,3 +2,8 @@
               [maxWidth]="'75%'"
               [slides]="slides">
 </app-carousel>
+
+<div class="dishes-cards-wrapper">
+  <app-dishes-cards></app-dishes-cards>
+</div>
+
