- allow dish editing - fixed formatDate pipe (allowed date or time only)

--- a/src/app/admin-panel/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/admin-panel/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -1,6 +1,7 @@
 <ffp-table [tableName]="'DishesOverview'"
            [displayedColumns]="displayedColumns"
            [service]="service"
+           (onDoubleClick)="openEditDish($event)"
            [columnTemplateRefs]="{
              category: category, imageUrl: imageUrl, description: description,
              createdDate: createdDate, lastModifiedDate: lastModifiedDate}">
