--- a/src/app/admin-panel/pages/users/users-overview/users-overview.component.html
+++ b/src/app/admin-panel/pages/users/users-overview/users-overview.component.html
@@ -27,6 +27,6 @@
     {{data.lastModifiedDate | formatDate}}
   </ng-template>
   <ng-template #birthday let-data="data">
-    {{data.birthday | formatDate}}
+    {{data.birthday | formatDate:true:false}}
   </ng-template>
 </ffp-table>
