- displaying recommendations on home page - first implementations of ordering on the client module - implementing logout

--- a/src/app/admin-panel/components/sidenav/sidenav.component.html
+++ b/src/app/admin-panel/components/sidenav/sidenav.component.html
@@ -44,7 +44,7 @@
 
   <div class="actions-block">
     <a class="sidenav-nav-link"
-       routerLink="/logout">
+       (click)="logout()">
       <i [className]="'fal fa-arrow-circle-left'" class="sidenav-link-icon"></i>
       <span class="sidenav-link-text" @fadeInOut *ngIf="collapsed">Logout</span>
     </a>
