--- a/src/app/client/components/carousel/carousel.component.html
+++ b/src/app/client/components/carousel/carousel.component.html
@@ -14,12 +14,20 @@
          [ngClass]="{'active': currentIndex === i}">
 
       <div class="slide-info">
-        <h1 class="title">{{ item.title }}</h1>
+        <h1 class="title">{{ item.title }} <b>{{item.newPrice.toFixed(2) | currency:'USD'}}</b>  (<s> {{item.oldPrice.toFixed(2) | currency:'USD'}}</s>)</h1>
         <h2 class="subtitle">{{ item.subtitle }}</h2>
         <h4 class="description">{{ item.description }}</h4>
       </div>
       <div class="slide-image">
         <img src="{{item.imageUrl}}" alt="{{item.title}}">
+      </div>
+
+      <div class="labels-list">
+        <mat-chip-listbox aria-label="Labels selection">
+          <mat-chip *ngFor="let label of item.labels">
+            {{label}}
+          </mat-chip>
+        </mat-chip-listbox>
       </div>
     </div>
 
