--- a/src/app/client/components/carousel/carousel.component.scss
+++ b/src/app/client/components/carousel/carousel.component.scss
@@ -10,6 +10,7 @@
 }
 
 .slide {
+  position: relative;
   height: 450px;
   flex: 0 0 100%;
   text-align: center;
@@ -31,9 +32,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     img {
       height: 400px;
     }
+  }
+
+  .labels-list {
+    position: absolute;
+    top: 15px;
+    right: 15px;
   }
 }
 
@@ -60,4 +68,10 @@
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.6);
   z-index: 10000;
+}
+
+::ng-deep {
+  .mdc-evolution-chip-set__chips {
+    flex-flow: nowrap !important;
+  }
 }
