--- a/src/app/client/pages/home-page/home-page.component.html
+++ b/src/app/client/pages/home-page/home-page.component.html
@@ -1,5 +1,6 @@
 <app-carousel [height]="'400px'"
               [maxWidth]="'75%'"
+              *ngIf="slides?.length === 5"
               [slides]="slides">
 </app-carousel>
 
