--- a/src/app/client/pages/ordering/orders-history/orders-history.component.html
+++ b/src/app/client/pages/ordering/orders-history/orders-history.component.html
@@ -3,7 +3,7 @@
     <h1>My ordering history:</h1>
   </div>
 </div>
-<div class="orders-history-list">
+<div class="orders-history-list" *ngIf="orderItems">
   <ng-container *ngFor="let item of orderItems">
     <div class="order-list-item-wrapper">
       <app-order-list-item [orderItem]="item"></app-order-list-item>
