- added dishes menu page for client

--- a/src/app/client/pages/home-page/home-page.component.html
+++ b/src/app/client/pages/home-page/home-page.component.html
@@ -5,6 +5,6 @@
 </app-carousel>
 
 <div class="dishes-cards-wrapper">
-  <app-dishes-cards></app-dishes-cards>
+  <app-dishes-cards [dishes]="dishes"></app-dishes-cards>
 </div>
 
