--- a/src/app/core/features/home-page/home-page.component.html
+++ b/src/app/core/features/home-page/home-page.component.html
@@ -8,6 +8,6 @@
   </app-carousel>
 
   <div class="dishes-cards-wrapper">
-    <app-dishes-cards></app-dishes-cards>
+    <app-dishes-cards [dishes]="dishes"></app-dishes-cards>
   </div>
 </div>
